# udp-server-test-bevy

./: .gitignore
client/: Cargo.toml
client/assets/styles/: main-menu.ess  multiplayer-menu.ess
client/src/: main.rs  states.rs
client/src/game/: mod.rs
client/src/game/camera/: mod.rs
client/src/game/connection/: events.rs  mod.rs  systems.rs
client/src/game/message_handler/: events.rs  mod.rs  systems.rs
client/src/game/worlds/: constants.rs  errors.rs  helpers.rs  mod.rs
client/src/main_menu/: components.rs  mod.rs  systems.rs
client/src/main_menu/join_server/: mod.rs
client/src/menu/: mod.rs
client/src/menu/main/: helpers.rs  mod.rs  systems.rs
client/src/menu/multiplayer/: components.rs  helpers.rs  mod.rs  resources.rs  systems.rs
client/src/udp_client/: constants.rs  errors.rs  events.rs  mod.rs  resources.rs  systems.rs
client/src/ui/: mod.rs
client/src/utils/: errors.rs  mod.rs
client/worlds/e32cfa2f-8479-4f58-8ba6-4b63d3714389/: player.data
server/: Cargo.toml
server/config/: udp.properties
server/data/: e32cfa2f-8479-4f58-8ba6-4b63d3714389.sid
server/src/: main.rs
server/src/game/: mod.rs  resources.rs
server/src/game/connection_manager/: client.rs  mod.rs  resources.rs  systems.rs
server/src/game/data/: constants.rs  errors.rs  helpers.rs  mod.rs  resources.rs  systems.rs
server/src/game/message_handler/: events.rs  helpers.rs  mod.rs  resources.rs  systems.rs
server/src/receiver/: constants.rs  events.rs  helpers.rs  mod.rs  resources.rs  states.rs  systems.rs
server/src/receiver/config/: constants.rs  mod.rs  (+1 more)
(+18 files in other folders)
