[package]
name = "world_gen_game"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
bevy = "0.11"
bevy_ecs_tilemap = "0.11.0"
bevy_common_assets = { version = "0.6.0", features = ["json"] }

rand = "0.8.5"
noise = "0.8.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.97"
bevy-inspector-egui = "0.19.0"

futures-lite = "1.11"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

